vishnu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vishnu-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: vishnu.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vishnu-service
            port:
              number: 80
